# todo-axum-askama-htmx

./: Cargo.toml  LICENSE  README.md  package-lock.json  package.json  todos.sqlite
assets/css/: main.css
assets/js/: fontawesome.js
migrations/: 20230922174222_init.down.sql  20230922174222_init.up.sql
src/: api.rs  db.rs  main.rs  todo.rs
templates/: index.html
templates/components/: todo.html
