[package]
name = "todox"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = { version = "0.12.0", features = ["with-axum"] }
askama_axum = "0.3.0"
axum = { version = "0.6", features = ["ws"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "sqlite" ] }

tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.4", features = ["fs", "trace"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
tower-livereload = "*"
notify = "*"